fix url for links and adjust pointer on disabled buttons

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -216,9 +216,10 @@ button.blue:hover{
     background: linear-gradient(#4583D1, #4583D1);
 }
 button:disabled, button:disabled:hover {
+    pointer-events: none;
     background: #ccc;
     color: #eee;
-    cursor: default;
+    cursor: not-allowed;
 }
 form input.create {
     display: none;
